Optimize Dockerfile for Railway deployment

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,18 @@
-﻿node_modules
+node_modules
 npm-debug.log
 .env
+.env.local
 .git
 .gitignore
 .DS_Store
+dist
+build
+.next
+frontend
+*.log
+*.md
+test-*.js
+debug-*.js
+connect-*.js
+run-*.ps1
+*.ps1
