Fix nixpacks.toml: correct paths for backend directory

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,8 +3,8 @@ nixPkgs = ["nodejs-18_x"]
 
 [phases.install]
 cmds = [
-  "cd backend && npm install --production"
+  "npm install --production --prefix backend"
 ]
 
 [start]
-cmd = "cd backend && node server.js"
+cmd = "node backend/server.js"
