Update nixpacks.toml: add debug commands

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,8 +3,10 @@ nixPkgs = ["nodejs-18_x"]
 
 [phases.install]
 cmds = [
-  "npm install --production --prefix backend"
+  "ls -la",
+  "ls -la backend/ || echo 'backend directory not found'",
+  "cd backend && npm install --production"
 ]
 
 [start]
-cmd = "node backend/server.js"
+cmd = "cd backend && node server.js"
