Mejoras backend: Sistema de pagos (Binance, Redotpay, MoneyGram), sistema de puntos mejorado, optimizaciones y correcciones

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,47 @@ MONGO_URI=mongodb+srv://usuario:password@cluster.mongodb.net/nombre-database?ret
 MONGO_PASSWORD=tu-password-aqui
 JWT_SECRET=tu-secret-key-super-segura-aqui-cambiar-en-produccion
 NODE_ENV=development
+
+# Email Configuration
+# Opción 1: Gmail (recomendado para desarrollo)
+EMAIL_USER=tu-email@gmail.com
+EMAIL_PASS=tu-app-password-de-gmail
+# O usar:
+GMAIL_USER=tu-email@gmail.com
+GMAIL_APP_PASSWORD=tu-app-password-de-gmail
+
+# Opción 2: SMTP personalizado
+SMTP_HOST=smtp.tu-servidor.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=tu-usuario-smtp
+SMTP_PASS=tu-password-smtp
+
+# Configuración de la empresa
+COMPANY_NAME=Yassline Tour
+COMPANY_EMAIL=info@yassline.com
+COMPANY_ADDRESS=Marruecos
+COMPANY_PHONE=+212 XXX XXX XXX
+ADMIN_EMAIL=admin@yassline.com
+
+# Configuración de Pagos
+# Binance
+BINANCE_ACCOUNT_ID=89150838
+BINANCE_WALLET_ADDRESS=tu-direccion-billetera-binance
+BINANCE_NETWORK=BSC
+BINANCE_CURRENCY=USDT
+
+# Redotpay
+REDOTPAY_ACCOUNT_ID=1764625181
+REDOTPAY_API_KEY=tu-api-key-redotpay
+REDOTPAY_MERCHANT_ID=tu-merchant-id-redotpay
+REDOTPAY_API_URL=https://api.redotpay.com
+
+# MoneyGram
+MONEYGRAM_RECEIVER_NAME=Yassin El Makhloufi
+MONEYGRAM_COUNTRY=Marruecos
+MONEYGRAM_CITY=Marrakech
+MONEYGRAM_REFERENCE_NUMBER=MONEYGRAM_REF
+
+# Frontend URL (para callbacks de Redotpay)
+FRONTEND_URL=http://localhost:3000
