--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,13 @@
 node_modules/
 .env
+.env.test
 .DS_Store
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# testing
+coverage/
+.jest-cache
+*.test.js.snap
