fix: endpoint /api/health/email y uso de Resend para emails

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,14 +5,20 @@ JWT_SECRET=tu-secret-key-super-segura-aqui-cambiar-en-produccion
 NODE_ENV=development
 
 # Email Configuration
-# Opción 1: Gmail (recomendado para desarrollo)
+# --- Opción RECOMENDADA para Railway (evita ETIMEDOUT de SMTP) ---
+# Resend: https://resend.com → API Keys → crear clave, copiar aquí
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxx
+# Opcional: remitente (por defecto "Yassline Tour <onboarding@resend.dev>")
+# Si verificas tu dominio en Resend, usa: "Yassline Tour <info@yassline.com>"
+RESEND_FROM=Yassline Tour <onboarding@resend.dev>
+
+# --- Opción 2: Gmail (desarrollo local) ---
 EMAIL_USER=tu-email@gmail.com
 EMAIL_PASS=tu-app-password-de-gmail
-# O usar:
 GMAIL_USER=tu-email@gmail.com
 GMAIL_APP_PASSWORD=tu-app-password-de-gmail
 
-# Opción 2: SMTP personalizado
+# --- Opción 3: SMTP personalizado (Hostinger, etc.; en Railway suele dar timeout) ---
 SMTP_HOST=smtp.tu-servidor.com
 SMTP_PORT=587
 SMTP_SECURE=false
