Emails y diseÃ±o web: servicio de email, iconos de vehÃ­culos y servicios, paleta Yassline, dropdowns mejorados

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,9 +28,13 @@ SMTP_PASS=tu-password-smtp
 # Configuración de la empresa
 COMPANY_NAME=Yassline Tour
 COMPANY_EMAIL=info@yassline.com
+COMPANY_TAGLINE=Transporte y experiencias en Marruecos
 COMPANY_ADDRESS=Marruecos
 COMPANY_PHONE=+212 XXX XXX XXX
 ADMIN_EMAIL=admin@yassline.com
+FRONTEND_URL=https://yassline.com
+# Logo en emails: URL pública (ej. sube logo a frontend/public/logo-email.png → https://yassline.com/logo-email.png)
+LOGO_URL=https://yassline.com/logo-email.png
 
 # Configuración de Pagos
 # Binance
